misc features and fixes
